# slint

./: ARCHITECTURE_NOTES.md  CHANGELOG.md  Cargo.toml  REUSE.toml  extend-testing-plan.md
api/cpp/: CMakeLists.txt
api/rs/macros/: Cargo.toml
api/rs/slint/: lib.rs
editors/tree-sitter-slint/: grammar.js
editors/vscode/: package.json
examples/: Cargo.toml
examples/femtovg_wgpu/: Cargo.toml  background.wgsl  composite.wgsl  crt_postprocess.wgsl  scene.slint
examples/femtovg_wgpu/src/: headless.rs  main.rs  postprocess.rs  readback.rs  windowed.rs
examples/node-editor/: Cargo.toml  build.rs  filter_node.slint  node_editor_lib.slint  pin.slint  ui.slint
examples/node-editor/src/: main.rs
examples/skia-wgpu-color-oracle/: Cargo.toml  main.rs
internal/backends/android-activity/: javahelper.rs
internal/backends/qt/: lib.rs  qt_window.rs
internal/backends/selector/: api.rs
internal/backends/testing/: slint_systest.proto  systest.rs
internal/common/: builtin_structs.rs  lib.rs
internal/compiler/: Cargo.toml  build.rs  builtins.slint  diagnostics.rs  expression_tree.rs  frozen_builtins.rs  langtype.rs  lib.rs  load_builtins.rs  lookup.rs  parser.rs  passes.rs  typeloader.rs  typeregister.rs
internal/compiler/frozen-builtin-artifacts/: cosmic-dark.postcard  cosmic-light.postcard  cosmic.postcard  cupertino-dark.postcard  cupertino-light.postcard  cupertino.postcard  fluent-dark.postcard  fluent-light.postcard  fluent.postcard  frozen_builtin_artifacts.manifest  frozen_builtin_artifacts.rs  material-dark.postcard  material-light.postcard  material.postcard  qt.postcard
internal/compiler/generator/: cpp.rs  cpp_live_preview.rs  rust.rs
internal/compiler/llr/: expression.rs  lower_expression.rs  pretty_print.rs
internal/compiler/passes/: binding_analysis.rs
internal/core/: api.rs  context.rs  items.rs  lib.rs  model.rs  platform.rs  window.rs
internal/core/items/: node_editor.rs  text.rs
internal/interpreter/: dynamic_item_tree.rs  eval.rs
internal/renderers/femtovg/: wgpu.rs
tests/cases/accessibility/: materialized.slint
tests/cases/elements/: node_editor.slint  node_editor_grid.slint.disabled  node_editor_link_creation.slint  node_editor_registry.slint  node_editor_selection.slint  node_editor_shortcuts.slint  node_selection.slint  node_selection_with_overlay.slint
tests/cases/testing/: dynamic_components.slint
tests/cases/translations/: bundle.slint
tools/compiler/: Cargo.toml
tools/frozen-builtin-artifacts/: Cargo.toml  main.rs
tools/lsp/: editor.rs  language.rs  main.rs
tools/lsp/language/: goto.rs  test.rs
tools/slint-mcp-server/: README.md  test_integration.sh
tools/slint-mcp-server/src/: main.rs
(+11 files in other folders)
